feat:update icons paths & include 128 size

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -23,11 +23,18 @@
             "run_at": "document_end"
         }
     ],
+    "icons": {
+        "16": "icons/16x16.png",
+        "48": "icons/48x48.png",
+        "128": "icons/128x128.png"
+    },
     "action": {
         "default_popup": "index.html",
         "default_title": "LazyScroll",
         "default_icon": {
-            "32": "icons/favicon.ico"
+            "16": "icons/16x16.png",
+            "48": "icons/48x48.png",
+            "128": "icons/128x128.png"
         }
     }
 }
